[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gorep-addon/GorepWindow.gd" type="Script" id=1]

[node name="GorepWindow" type="WindowDialog"]
visible = true
margin_right = 480.0
margin_bottom = 296.0
popup_exclusive = true
window_title = "Gorep Dependencies"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.471985
margin_right = 0.471985
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dependencies" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Dependencies"]
margin_right = 464.0
margin_bottom = 20.0

[node name="AddBtn" type="Button" parent="Dependencies/Buttons"]
margin_right = 37.0
margin_bottom = 20.0
text = "Add"

[node name="RemoveBtn" type="Button" parent="Dependencies/Buttons"]
margin_left = 41.0
margin_right = 105.0
margin_bottom = 20.0
disabled = true
text = "Remove"

[node name="EditBtn" type="Button" parent="Dependencies/Buttons"]
margin_left = 109.0
margin_right = 145.0
margin_bottom = 20.0
disabled = true
text = "Edit"

[node name="List" type="ItemList" parent="Dependencies"]
margin_top = 24.0
margin_right = 464.0
margin_bottom = 33.0
allow_reselect = true
auto_height = true

[connection signal="about_to_show" from="." to="." method="_on_GorepWindow_about_to_show"]
[connection signal="pressed" from="Dependencies/Buttons/AddBtn" to="." method="_on_AddBtn_pressed"]
[connection signal="pressed" from="Dependencies/Buttons/RemoveBtn" to="." method="_on_RemoveBtn_pressed"]
[connection signal="pressed" from="Dependencies/Buttons/EditBtn" to="." method="_on_EditBtn_pressed"]
[connection signal="gui_input" from="Dependencies/List" to="." method="_on_List_gui_input"]
[connection signal="item_selected" from="Dependencies/List" to="." method="_on_List_item_selected"]
[connection signal="nothing_selected" from="Dependencies/List" to="." method="_on_List_nothing_selected"]
